# pytest-reporter-html1

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: pythonpackage.yml  pythonpublish.yml
pytest_reporter_html1/: __init__.py  plugin.py
pytest_reporter_html1/templates/html1/: base.html  index.html  main.js  module.html  style.css  test.html
tests/: pytest.ini  test_samples.py
tests/samples/: conftest.py  sample_capturing.py  sample_class.py  sample_doctest.txt  sample_extra.py  sample_outcomes.py  sample_reruns.py  sample_test_info.py  sample_unittest.py  sample_warning.py
