[project]
name = "pytest-reporter-html1"
description = "A basic HTML report template for Pytest"
authors = [
    {name = "Christian Sandberg", email = "christiansandberg@me.com"},
]
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing",
  "Topic :: Text Processing :: Markup :: HTML",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
license = "MIT"
dependencies = [
    "pytest-reporter>=0.4.0",
    "Jinja2",
    "ansi2html>=1.3.0",
    "htmlmin2",
    "docutils>=0.22",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/christiansandberg/pytest-reporter-html1.git"
Issues = "https://github.com/christiansandberg/pytest-reporter-html1/issues"

[project.entry-points.pytest11]
reporter_html1 = "pytest_reporter_html1.plugin"

[tool.setuptools_scm]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
